# roder

./: .gitignore  .mise.toml  .roderdesign  AGENTS.md  Cargo.toml  LICENCE  Makefile  README.md  WHITEPAPER.md  go.mod  go.sum  jaeger.sh  knope.toml  persist-reasoning-text-writeup.md  release-plz.toml  roadmap  roder.toml
crates/roder-api/: CHANGELOG.md  Cargo.toml  README.md
crates/roder-api-transcript/: Cargo.toml  README.md
crates/roder-api-transcript/src/: format.rs  lib.rs  reader.rs  redaction.rs  writer.rs
crates/roder-api/src/: artifacts.rs  automations.rs  capabilities.rs  catalog.rs  chrome.rs  code_index.rs  command_shell.rs  context.rs  conversation.rs  discovery.rs  distribution.rs  dynamic_workflows.rs  embeddings.rs  events.rs  extension.rs  extension_state.rs  forks.rs  goals.rs  hosted_hooks.rs  identity.rs  inference.rs  inference_routing.rs  interactive.rs  knowledge.rs  lib.rs  lifecycle.rs  marketplace.rs  mcp_auth.rs  media.rs  memory.rs  notifications.rs  packages.rs  plan_review.rs  policy_mode.rs  process_extension.rs  processes.rs  reliability.rs  remote_runner.rs  retrieval.rs  session.rs  (+16 more)
crates/roder-api/tests/: extension_api_compat.rs  fork_api.rs  packages_spec.rs  process_extension_protocol.rs  thread_projection.rs
crates/roder-app-server/: CHANGELOG.md  Cargo.toml  README.md
crates/roder-app-server-core/: Cargo.toml  README.md
crates/roder-app-server-core/src/: client.rs  lib.rs  transcript.rs
crates/roder-app-server-hosted/: Cargo.toml  README.md
crates/roder-app-server-hosted/src/: audit.rs  auth.rs  hook_delivery.rs  hooks.rs  lib.rs  rate_limit.rs  runtime_pool.rs  tenant.rs
crates/roder-app-server-hosted/tests/: hosted_auth.rs  hosted_e2e.rs  hosted_gateway.rs  hosted_hooks.rs
crates/roder-app-server-node/: Cargo.toml  README.md
crates/roder-app-server-node/src/: lib.rs  remote_client.rs
crates/roder-app-server-node/tests/: agent_node_security.rs  remote_app_client.rs
crates/roder-app-server/src/: acp.rs  artifact.rs  automation_worker.rs  automations.rs  chrome.rs  client.rs  code_index.rs  codex.rs  command.rs  command_process.rs  compaction.rs  design.rs  desktop_contract.rs  discovery.rs  evals.rs  forks.rs  fs.rs  gbrain.rs  git_changes.rs  goals.rs  inference_routing.rs  item_stream.rs  knowledge.rs  legacy.rs  lib.rs  marketplaces.rs  media_generation.rs  method_manifest.rs  notifications.rs  packages.rs  processes.rs  protocol_contract.rs  remote.rs  remote_client.rs  retrieval.rs  search_index.rs  server.rs  skills.rs  speech.rs  stats.rs  (+7 more)
crates/roder-app-server/tests/: acp.rs  agent_node_security.rs  commands.rs  e2e.rs  fork_worktree.rs  forks.rs  gbrain_bridge.rs  hosted_auth.rs  hosted_e2e.rs  hosted_gateway.rs  hosted_hooks.rs  packages_e2e.rs  postgres_like_thread_store.rs  process_extension_cursor_sdk.rs  process_extension_python_provider.rs  remote_app_client.rs  turn_start_steering.rs
crates/roder-automations/: Cargo.toml  README.md
crates/roder-automations/src/: clock.rs  lease.rs  lib.rs  migrations.rs  model.rs  schedule.rs  store.rs  supervisor.rs
crates/roder-automations/tests/: scheduler.rs
crates/roder-cli/: CHANGELOG.md  Cargo.toml  README.md
crates/roder-cli/src/: acp.rs  agent_node.rs  automations.rs  chrome.rs  commands.rs  config.rs  evals.rs  exec.rs  exec_events.rs  exec_output.rs  forks.rs  knowledge.rs  lib.rs  main.rs  marketplace.rs  media.rs  packages.rs  remote_panel.rs  replay.rs  resume_picker.rs  roadmap_cli.rs  runners.rs  sdk_schema.rs  skills.rs  speech.rs  stats.rs  tasks_cli.rs  tui_config.rs  webwright.rs  workflows.rs  zerolang.rs
crates/roder-cli/tests/: exec_process_smoke.rs
crates/roder-code-index/: Cargo.toml  README.md
crates/roder-code-index/src/: chunk.rs  lib.rs  merkle.rs  proofs.rs  sqlite.rs  sqlite_embeddings.rs  sqlite_schema.rs
crates/roder-codex-auth/: CHANGELOG.md  Cargo.toml  README.md
crates/roder-codex-auth/src/: browser.rs  lib.rs  store.rs
crates/roder-commands/: CHANGELOG.md  Cargo.toml  README.md
crates/roder-commands/src/: expand.rs  frontmatter.rs  lib.rs  loader.rs  registry.rs  spec.rs  template.rs  workflows.rs
crates/roder-commands/tests/: expand.rs  workflows.rs
crates/roder-config/: CHANGELOG.md  Cargo.toml  README.md
crates/roder-config/src/: agent_node.rs  analytics.rs  dynamic_workflows.rs  hosted.rs  lib.rs  tui.rs  workflow_import.rs
crates/roder-config/tests/: packages.rs
crates/roder-configure/: CHANGELOG.md  Cargo.toml  README.md
crates/roder-configure/profiles/: anthropic-only.toml  full.toml  minimal.toml  openai-only.toml  remote-app-server.toml  research-headless.toml  synthetic-search.toml  tavily.toml  zero-coder-edits.toml
crates/roder-configure/src/: build.rs  catalog.rs  codegen.rs  headless.rs  lib.rs  main.rs  profile.rs
crates/roder-configure/templates/: Cargo.toml.hbs  README.md.hbs  config.toml.hbs  main.rs.hbs  remote-app-server-main.rs.hbs
crates/roder-context/: Cargo.toml  README.md
crates/roder-core/: CHANGELOG.md  Cargo.toml  README.md
crates/roder-dist-hosted/: CHANGELOG.md  Cargo.toml  README.md
crates/roder-dynamic-workflows/: Cargo.toml  README.md
crates/roder-edit-core/: Cargo.toml  README.md
crates/roder-edit-wasm/: Cargo.toml  README.md
crates/roder-evals/: Cargo.toml  README.md
crates/roder-ext-anthropic/: CHANGELOG.md  Cargo.toml  README.md
crates/roder-ext-chrome/: Cargo.toml  README.md
crates/roder-ext-claude-code/: CHANGELOG.md  Cargo.toml  README.md
crates/roder-ext-cursor/: CHANGELOG.md  Cargo.toml  README.md
crates/roder-ext-deepseek/: CHANGELOG.md  Cargo.toml  README.md
crates/roder-ext-disk-context/: Cargo.toml  README.md
crates/roder-ext-firecrawl-search/: Cargo.toml  README.md
crates/roder-ext-fireworks/: CHANGELOG.md  Cargo.toml  README.md
e2e/: .gitignore  README.md  conftest.py  pyproject.toml
e2e/tests/: test_composer.py  test_exit_dialog.py  test_modes.py  test_mouse_interactions.py  test_resize.py  test_settings_modal.py  test_startup.py  test_status_bar.py  test_timeline_focus.py  test_visual_regression.py
(+2102 files in other folders)
