[workspace]
members = [
    "crates/*"
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
async-stream = "0.3.6"
base64 = "0.22.1"
crossterm = "0.29.0"
dirs = "6.0.0"
futures = "0.3.32"
rand = "0.10.1"
ratatui = { version = "0.30.0", features = ["crossterm_0_29"] }
reqwest = { version = "0.13.3", features = ["form"] }
semver = "1.0.28"
serde = "1.0.228"
serde_json = "1.0.149"
serde_yaml = "0.9.34"
sha2 = "0.11.0"
time = "0.3.47"
tokio = "1.52.3"
toml = "1.1.2"
urlencoding = "2.1.3"
uuid = "1.23.1"

roder-api = { path = "crates/roder-api" }
roder-app-server = { path = "crates/roder-app-server" }
roder-codex-auth = { path = "crates/roder-codex-auth" }
roder-commands = { path = "crates/roder-commands" }
roder-config = { path = "crates/roder-config" }
roder-core = { path = "crates/roder-core" }
roder-ext-anthropic = { path = "crates/roder-ext-anthropic" }
roder-ext-disk-context = { path = "crates/roder-ext-disk-context" }
roder-ext-gemini = { path = "crates/roder-ext-gemini" }
roder-ext-firecrawl-search = { path = "crates/roder-ext-firecrawl-search" }
roder-ext-jsonl-session = { path = "crates/roder-ext-jsonl-session" }
roder-ext-memory = { path = "crates/roder-ext-memory" }
roder-ext-openai-responses = { path = "crates/roder-ext-openai-responses" }
roder-ext-parallel-search = { path = "crates/roder-ext-parallel-search" }
roder-ext-perplexity-search = { path = "crates/roder-ext-perplexity-search" }
roder-ext-plan-mode = { path = "crates/roder-ext-plan-mode" }
roder-ext-subagents = { path = "crates/roder-ext-subagents" }
roder-ext-tavily-search = { path = "crates/roder-ext-tavily-search" }
roder-ext-web-search = { path = "crates/roder-ext-web-search" }
roder-extension-host = { path = "crates/roder-extension-host" }
roder-protocol = { path = "crates/roder-protocol" }
roder-tools = { path = "crates/roder-tools" }
roder-tui = { path = "crates/roder-tui" }
roder-web-search = { path = "crates/roder-web-search" }
