[workspace]
members = [
    "crates/*",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
async-stream = "0.3.6"
base64 = "0.22.1"
bytes = "1.11.1"
chrono = "0.4.42"
chrono-tz = "0.10.4"
croner = "3.0.1"
crossterm = "0.29.0"
dirs = "6.0.0"
futures = "0.3.32"
if-addrs = "0.15.0"
ignore = "0.4.25"
rand = "0.10.1"
qrcode = { version = "0.14.1", default-features = false }
ratatui = { version = "0.30.0", features = ["crossterm_0_29"] }
reqwest = { version = "0.13.3", default-features = false, features = ["form", "http2", "json", "rustls", "system-proxy"] }
rusqlite = { version = "0.38.0", features = ["bundled"] }
semver = "1.0.28"
serde = "1.0.228"
serde_json = { version = "1.0.149", features = ["preserve_order"] }
serde_yaml = "0.9.34"
sha2 = "0.11.0"
similar = "3.1.0"
time = "0.3.47"
tokio = { version = "1.52.3", default-features = false, features = [
    "fs",
    "io-std",
    "io-util",
    "macros",
    "net",
    "process",
    "rt-multi-thread",
    "signal",
    "sync",
    "time",
] }
tokio-tungstenite = "0.28.0"
toml = "1.1.2"
urlencoding = "2.1.3"
uuid = "1.23.1"

roder-api = { path = "crates/roder-api" }
roder-api-transcript = { path = "crates/roder-api-transcript" }
roder-automations = { path = "crates/roder-automations" }
roder-app-server = { path = "crates/roder-app-server" }
roder-codex-auth = { path = "crates/roder-codex-auth" }
roder-commands = { path = "crates/roder-commands" }
roder-config = { path = "crates/roder-config" }
roder-context = { path = "crates/roder-context" }
roder-core = { path = "crates/roder-core" }
roder-code-index = { path = "crates/roder-code-index" }
roder-roadmap = { path = "crates/roder-roadmap" }
roder-supergrok-auth = { path = "crates/roder-supergrok-auth" }
roder-ext-anthropic = { path = "crates/roder-ext-anthropic" }
roder-ext-cursor = { path = "crates/roder-ext-cursor" }
roder-ext-disk-context = { path = "crates/roder-ext-disk-context" }
roder-ext-gemini = { path = "crates/roder-ext-gemini" }
roder-ext-firecrawl-search = { path = "crates/roder-ext-firecrawl-search" }
roder-ext-jsonl-thread-store = { path = "crates/roder-ext-jsonl-thread-store" }
roder-ext-memory = { path = "crates/roder-ext-memory" }
roder-ext-notify-desktop = { path = "crates/roder-ext-notify-desktop" }
roder-ext-notify-terminal = { path = "crates/roder-ext-notify-terminal" }
roder-ext-openai-responses = { path = "crates/roder-ext-openai-responses" }
roder-ext-openai-chat-completions = { path = "crates/roder-ext-openai-chat-completions" }
roder-ext-openai-embeddings = { path = "crates/roder-ext-openai-embeddings" }
roder-ext-openai-speech = { path = "crates/roder-ext-openai-speech" }
roder-ext-google-speech = { path = "crates/roder-ext-google-speech" }
roder-ext-opencode = { path = "crates/roder-ext-opencode" }
roder-ext-parallel-search = { path = "crates/roder-ext-parallel-search" }
roder-ext-perplexity-search = { path = "crates/roder-ext-perplexity-search" }
roder-ext-poolside = { path = "crates/roder-ext-poolside" }
roder-ext-plan-mode = { path = "crates/roder-ext-plan-mode" }
roder-ext-runner-blaxel = { path = "crates/roder-ext-runner-blaxel" }
roder-ext-runner-cloudflare = { path = "crates/roder-ext-runner-cloudflare" }
roder-ext-runner-daytona = { path = "crates/roder-ext-runner-daytona" }
roder-ext-runner-docker = { path = "crates/roder-ext-runner-docker" }
roder-ext-runner-e2b = { path = "crates/roder-ext-runner-e2b" }
roder-ext-runner-hosted-common = { path = "crates/roder-ext-runner-hosted-common" }
roder-ext-runner-modal = { path = "crates/roder-ext-runner-modal" }
roder-ext-runner-runloop = { path = "crates/roder-ext-runner-runloop" }
roder-ext-runner-unix-local = { path = "crates/roder-ext-runner-unix-local" }
roder-ext-runner-vercel = { path = "crates/roder-ext-runner-vercel" }
roder-ext-subagents = { path = "crates/roder-ext-subagents" }
roder-ext-task-ledger = { path = "crates/roder-ext-task-ledger" }
roder-ext-task-process = { path = "crates/roder-ext-task-process" }
roder-ext-verification = { path = "crates/roder-ext-verification" }
roder-ext-tavily-search = { path = "crates/roder-ext-tavily-search" }
roder-ext-webwright = { path = "crates/roder-ext-webwright" }
roder-ext-web-search = { path = "crates/roder-ext-web-search" }
roder-ext-xai = { path = "crates/roder-ext-xai" }
roder-ext-xiaomi-mimo = { path = "crates/roder-ext-xiaomi-mimo" }
roder-extension-host = { path = "crates/roder-extension-host" }
roder-evals = { path = "crates/roder-evals" }
roder-protocol = { path = "crates/roder-protocol" }
roder-sandbox = { path = "crates/roder-sandbox" }
roder-search = { path = "crates/roder-search" }
roder-skills = { path = "crates/roder-skills" }
roder-theme = { path = "crates/roder-theme" }
roder-tasks = { path = "crates/roder-tasks" }
roder-tools = { path = "crates/roder-tools" }
roder-tui = { path = "crates/roder-tui" }
roder-web-search = { path = "crates/roder-web-search" }

[profile.dev]
# Fast local builds: no debug info.
debug = 0
split-debuginfo = "unpacked"

[profile.test]
inherits = "dev"
# Keep test compilation fast; optimize only release builds.
opt-level = 0
