[workspace]
members = [
    "crates/*",
]
resolver = "3"

[workspace.package]
edition = "2024"
authors = ["Pandelis Zembashis"]
description = "Agentic software development tools and SDKs for Roder."
license = "MIT"
repository = "https://github.com/RoderAI/roder"
readme = "README.md"

[workspace.dependencies]
anyhow = "1.0.102"
agent-client-protocol-schema = "0.13.6"
async-trait = "0.1.89"
async-stream = "0.3.6"
base64 = "0.22.1"
boa_engine = { version = "0.21.1", default-features = false }
bytes = "1.11.1"
chrono = "0.4.42"
chrono-tz = "0.10.4"
croner = "3.0.1"
crossterm = "0.29.0"
dirs = "6.0.0"
futures = "0.3.32"
h2 = "0.4.14"
http = "1.4.0"
if-addrs = "0.15.0"
globset = "0.4.16"
ignore = "0.4.25"
rand = "0.10.1"
qrcode = { version = "0.14.1", default-features = false }
ratatui = { version = "0.30.0", features = ["crossterm_0_29"] }
reqwest = { version = "0.13.3", default-features = false, features = ["form", "http2", "json", "rustls", "system-proxy"] }
rusqlite = { version = "0.38.0", features = ["bundled"] }
semver = "1.0.28"
serde = "1.0.228"
serde_json = { version = "1.0.149", features = ["preserve_order"] }
sqlite-vec = "0.1.9"
sqlx-core = { version = "0.8.6", default-features = false, features = ["json", "time", "uuid", "_rt-tokio", "_tls-rustls-ring-webpki"] }
sqlx-mysql = { version = "0.8.6", default-features = false, features = ["json", "time", "uuid"] }
sqlx-postgres = { version = "0.8.6", default-features = false, features = ["json", "time", "uuid"] }
serde_yaml = "0.9.34"
sha2 = "0.11.0"
similar = "3.1.0"
tar = "0.4.44"
time = "0.3.47"
tokio = { version = "1.52.3", default-features = false, features = [
    "fs",
    "io-std",
    "io-util",
    "macros",
    "net",
    "process",
    "rt-multi-thread",
    "signal",
    "sync",
    "time",
] }
tokio-tungstenite = "0.28.0"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
rcgen = "0.13"
rustls-pemfile = "2.2"
toml = "1.1.2"
urlencoding = "2.1.3"
unicode-normalization = "0.1.25"
uuid = "1.23.1"
wasm-bindgen = "0.2.106"
which = "6"

roder-api = { path = "crates/roder-api", version = "0.1.0" }
roder-api-transcript = { path = "crates/roder-api-transcript", version = "0.1.0" }
roder-automations = { path = "crates/roder-automations", version = "0.1.0" }
roder-app-server = { path = "crates/roder-app-server", version = "0.1.0" }
roder-codex-auth = { path = "crates/roder-codex-auth", version = "0.1.0" }
roder-commands = { path = "crates/roder-commands", version = "0.1.0" }
roder-config = { path = "crates/roder-config", version = "0.1.0" }
roder-context = { path = "crates/roder-context", version = "0.1.0" }
roder-core = { path = "crates/roder-core", version = "0.1.0" }
roder-dist-hosted = { path = "crates/roder-dist-hosted", version = "0.1.0" }
roder-code-index = { path = "crates/roder-code-index", version = "0.1.0" }
roder-dynamic-workflows = { path = "crates/roder-dynamic-workflows", version = "0.1.0" }
roder-edit-core = { path = "crates/roder-edit-core", version = "0.1.0" }
roder-roadmap = { path = "crates/roder-roadmap", version = "0.1.0" }
roder-supergrok-auth = { path = "crates/roder-supergrok-auth", version = "0.1.0" }
roder-ext-anthropic = { path = "crates/roder-ext-anthropic", version = "0.1.0" }
roder-ext-chrome = { path = "crates/roder-ext-chrome", version = "0.1.0" }
roder-ext-claude-code = { path = "crates/roder-ext-claude-code", version = "0.1.0" }
roder-ext-cursor = { path = "crates/roder-ext-cursor", version = "0.1.0" }
roder-ext-disk-context = { path = "crates/roder-ext-disk-context", version = "0.1.0" }
roder-ext-gemini = { path = "crates/roder-ext-gemini", version = "0.1.0" }
roder-ext-fireworks = { path = "crates/roder-ext-fireworks", version = "0.1.0" }
roder-ext-firecrawl-search = { path = "crates/roder-ext-firecrawl-search", version = "0.1.0" }
roder-ext-git = { path = "crates/roder-ext-git", version = "0.1.0" }
roder-ext-google-embeddings = { path = "crates/roder-ext-google-embeddings", version = "0.1.0" }
roder-ext-google-images = { path = "crates/roder-ext-google-images", version = "0.1.0" }
roder-ext-honcho = { path = "crates/roder-ext-honcho", version = "0.1.0" }
roder-ext-inference-router = { path = "crates/roder-ext-inference-router", version = "0.1.0" }
roder-ext-jsonl-thread-store = { path = "crates/roder-ext-jsonl-thread-store", version = "0.1.0" }
roder-ext-knowledge-md = { path = "crates/roder-ext-knowledge-md", version = "0.1.0" }
roder-ext-kimi-code = { path = "crates/roder-ext-kimi-code", version = "0.1.0" }
roder-ext-mcp = { path = "crates/roder-ext-mcp", version = "0.1.0" }
roder-ext-memory = { path = "crates/roder-ext-memory", version = "0.1.0" }
roder-ext-mysql-session = { path = "crates/roder-ext-mysql-session", version = "0.1.0" }
roder-ext-notify-desktop = { path = "crates/roder-ext-notify-desktop", version = "0.1.0" }
roder-ext-notify-terminal = { path = "crates/roder-ext-notify-terminal", version = "0.1.0" }
roder-ext-openai-responses = { path = "crates/roder-ext-openai-responses", version = "0.1.0" }
roder-ext-openai-chat-completions = { path = "crates/roder-ext-openai-chat-completions", version = "0.1.0" }
roder-ext-openai-embeddings = { path = "crates/roder-ext-openai-embeddings", version = "0.1.0" }
roder-ext-openai-images = { path = "crates/roder-ext-openai-images", version = "0.1.0" }
roder-ext-openai-speech = { path = "crates/roder-ext-openai-speech", version = "0.1.0" }
roder-ext-openrouter = { path = "crates/roder-ext-openrouter", version = "0.1.0" }
roder-ext-zeroentropy-embeddings = { path = "crates/roder-ext-zeroentropy-embeddings", version = "0.1.0" }
roder-ext-google-speech = { path = "crates/roder-ext-google-speech", version = "0.1.0" }
roder-ext-opencode = { path = "crates/roder-ext-opencode", version = "0.1.0" }
roder-ext-fork-rift = { path = "crates/roder-ext-fork-rift", version = "0.1.0" }
roder-ext-postgres-session = { path = "crates/roder-ext-postgres-session", version = "0.1.0" }
roder-ext-process-host = { path = "crates/roder-ext-process-host", version = "0.1.0" }
roder-usage-analytics = { path = "crates/roder-usage-analytics", version = "0.1.0" }
roder-ext-parallel-search = { path = "crates/roder-ext-parallel-search", version = "0.1.0" }
roder-ext-perplexity-search = { path = "crates/roder-ext-perplexity-search", version = "0.1.0" }
roder-ext-poolside = { path = "crates/roder-ext-poolside", version = "0.1.0" }
roder-ext-roder-cloud = { path = "crates/roder-ext-roder-cloud", version = "0.1.0" }
roder-ext-plan-mode = { path = "crates/roder-ext-plan-mode", version = "0.1.0" }
roder-ext-runner-blaxel = { path = "crates/roder-ext-runner-blaxel", version = "0.1.0" }
roder-ext-runner-cloudflare = { path = "crates/roder-ext-runner-cloudflare", version = "0.1.0" }
roder-ext-runner-daytona = { path = "crates/roder-ext-runner-daytona", version = "0.1.0" }
roder-ext-runner-docker = { path = "crates/roder-ext-runner-docker", version = "0.1.0" }
roder-ext-runner-e2b = { path = "crates/roder-ext-runner-e2b", version = "0.1.0" }
roder-ext-runner-hosted-common = { path = "crates/roder-ext-runner-hosted-common", version = "0.1.0" }
roder-ext-runner-modal = { path = "crates/roder-ext-runner-modal", version = "0.1.0" }
roder-ext-runner-runloop = { path = "crates/roder-ext-runner-runloop", version = "0.1.0" }
roder-ext-runner-sprites = { path = "crates/roder-ext-runner-sprites", version = "0.1.0" }
roder-ext-runner-unix-local = { path = "crates/roder-ext-runner-unix-local", version = "0.1.0" }
roder-ext-runner-vercel = { path = "crates/roder-ext-runner-vercel", version = "0.1.0" }
roder-ext-subagents = { path = "crates/roder-ext-subagents", version = "0.1.0" }
roder-ext-task-ledger = { path = "crates/roder-ext-task-ledger", version = "0.1.0" }
roder-ext-task-process = { path = "crates/roder-ext-task-process", version = "0.1.0" }
roder-ext-verification = { path = "crates/roder-ext-verification", version = "0.1.0" }
roder-ext-vertex = { path = "crates/roder-ext-vertex", version = "0.1.0" }
roder-ext-tavily-search = { path = "crates/roder-ext-tavily-search", version = "0.1.0" }
roder-ext-webwright = { path = "crates/roder-ext-webwright", version = "0.1.0" }
roder-ext-web-search = { path = "crates/roder-ext-web-search", version = "0.1.0" }
roder-ext-xai = { path = "crates/roder-ext-xai", version = "0.1.0" }
roder-ext-xiaomi-mimo = { path = "crates/roder-ext-xiaomi-mimo", version = "0.1.0" }
roder-ext-zerolang = { path = "crates/roder-ext-zerolang", version = "0.1.0" }
roder-extension-host = { path = "crates/roder-extension-host", version = "0.1.0" }
roder-evals = { path = "crates/roder-evals", version = "0.1.0" }
roder-protocol = { path = "crates/roder-protocol", version = "0.1.0" }
roder-sandbox = { path = "crates/roder-sandbox", version = "0.1.0" }
roder-search = { path = "crates/roder-search", version = "0.1.0" }
roder-skills = { path = "crates/roder-skills", version = "0.1.0" }
roder-theme = { path = "crates/roder-theme", version = "0.1.0" }
roder-tasks = { path = "crates/roder-tasks", version = "0.1.0" }
roder-tools = { path = "crates/roder-tools", version = "0.1.0" }
roder-tui = { path = "crates/roder-tui", version = "0.1.0" }
roder-web-search = { path = "crates/roder-web-search", version = "0.1.0" }

[profile.dev]
# Fast local builds: no debug info.
debug = 0
# Abort on panic instead of unwinding. Drops ~30MB of unwind/exception tables
# (__eh_frame/__gcc_except_tab/__unwind_info) from the ~190MB dev binary, cutting
# both codegen and the final link write. The codebase has no catch_unwind, so the
# only behavioral delta is that a panic in a spawned task aborts the process
# (fail-fast) rather than being isolated to that task.
panic = "abort"
split-debuginfo = "unpacked"

[profile.test]
inherits = "dev"
# Keep test compilation fast; optimize only release builds.
opt-level = 0
# Note: the dev `panic = "abort"` does NOT reach tests/benches. Cargo always builds
# the test/bench harness with unwind, so #[should_panic] and nextest keep working.

[profile.release]
# Ship the same fail-fast panic strategy as dev for a smaller binary. The release
# `roder` binary can run the long-lived app-server; with abort, a panic in any
# session/worker task takes down the whole process instead of being isolated, so
# revisit this if per-session panic isolation becomes a requirement.
panic = "abort"
