[project]
name = "roder-e2e"
version = "0.1.0"
description = "End-to-end TUI tests for Roder, driven by tuiwright."
requires-python = ">=3.11"
dependencies = [
    "tuiwright>=0.2.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-timeout>=2.3",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
timeout = 30
