[package]
name = "roder-api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3", features = ["formatting", "parsing", "serde"] }
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
