[package]
name = "roder-api"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
futures.workspace = true
semver = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
time = { workspace = true, features = ["formatting", "parsing", "serde", "serde-well-known"] }
tokio.workspace = true

[dev-dependencies]
toml.workspace = true
