[package]
name = "roder-api"
version = "0.1.15"
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "README.md"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
futures.workspace = true
semver = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
time = { workspace = true, features = ["formatting", "parsing", "serde", "serde-well-known"] }
tokio.workspace = true

[dev-dependencies]
toml.workspace = true
