[package]
name = "roder-app-server-core"
version = "0.1.0"
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "README.md"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
roder-api.workspace = true
roder-api-transcript.workspace = true
roder-protocol.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
time.workspace = true
tokio.workspace = true

[dev-dependencies]
