[package]
name = "roder-app-server-hosted"
version = "0.1.0"
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "README.md"

[dependencies]
anyhow.workspace = true
futures.workspace = true
reqwest.workspace = true
roder-api.workspace = true
roder-app-server.workspace = true
roder-protocol.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sha2.workspace = true
time.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
roder-core.workspace = true
roder-ext-jsonl-thread-store.workspace = true
uuid = { workspace = true, features = ["v4"] }
