[package]
name = "roder-app-server"
version.workspace = true
edition.workspace = true
autotests = false

[features]
# Opt in for the large JSON-RPC integration suite (tests/e2e.rs).
e2e-tests = []

[[test]]
name = "e2e"
path = "tests/e2e.rs"
required-features = ["e2e-tests"]

[dependencies]
anyhow.workspace = true
base64.workspace = true
futures.workspace = true
if-addrs.workspace = true
rand.workspace = true
qrcode.workspace = true
roder-api.workspace = true
roder-codex-auth.workspace = true
roder-commands.workspace = true
roder-config.workspace = true
roder-core.workspace = true
roder-extension-host.workspace = true
roder-protocol.workspace = true
roder-roadmap.workspace = true
roder-search.workspace = true
roder-supergrok-auth.workspace = true
roder-tasks.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sha2.workspace = true
time.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
async-trait.workspace = true
futures.workspace = true
roder-ext-memory.workspace = true
roder-ext-openai-embeddings.workspace = true
roder-ext-subagents.workspace = true
roder-extension-host.workspace = true
roder-tools.workspace = true
