[package]
name = "roder-automations"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
croner.workspace = true
roder-api.workspace = true
rusqlite.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
time = { workspace = true, features = ["formatting", "parsing", "serde", "serde-well-known"] }

[dev-dependencies]
tempfile = "3.23.0"
