[package]
name = "roder-automations"
version = "0.1.0"
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
croner.workspace = true
roder-api.workspace = true
rusqlite.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
time = { workspace = true, features = ["formatting", "parsing", "serde", "serde-well-known"] }
tokio.workspace = true

[dev-dependencies]
tempfile = "3.23.0"
