[package]
name = "roder-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "roder"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
crossterm.workspace = true
time.workspace = true
roder-api.workspace = true
roder-app-server.workspace = true
roder-codex-auth.workspace = true
roder-commands.workspace = true
roder-config.workspace = true
roder-core.workspace = true
roder-ext-anthropic.workspace = true
roder-ext-disk-context.workspace = true
roder-ext-gemini.workspace = true
roder-ext-jsonl-session.workspace = true
roder-ext-memory.workspace = true
roder-ext-openai-responses.workspace = true
roder-ext-subagents.workspace = true
roder-extension-host.workspace = true
roder-protocol.workspace = true
roder-roadmap.workspace = true
roder-supergrok-auth.workspace = true
roder-tui.workspace = true
roder-tools.workspace = true
roder-web-search.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio.workspace = true
workspace-hack = { version = "0.1", path = "../../workspace-hack" }

[dev-dependencies]
time.workspace = true
