[package]
name = "roder"
version = "0.1.0"
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme.workspace = true

[[bin]]
name = "roder"
path = "src/main.rs"

[dependencies]
agent-client-protocol-schema.workspace = true
anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
crossterm.workspace = true
ratatui.workspace = true
time.workspace = true
roder-api.workspace = true
roder-api-transcript.workspace = true
roder-app-server.workspace = true
roder-codex-auth.workspace = true
roder-commands.workspace = true
roder-config.workspace = true
roder-usage-analytics.workspace = true
roder-core.workspace = true
roder-evals.workspace = true
roder-ext-anthropic.workspace = true
roder-ext-disk-context.workspace = true
roder-ext-gemini.workspace = true
roder-ext-jsonl-thread-store.workspace = true
roder-ext-memory.workspace = true
roder-ext-openai-responses.workspace = true
roder-ext-mysql-session.workspace = true
roder-ext-postgres-session.workspace = true
roder-ext-roder-cloud.workspace = true
roder-ext-subagents.workspace = true
roder-ext-zerolang.workspace = true
roder-extension-host.workspace = true
roder-protocol.workspace = true
roder-roadmap.workspace = true
roder-supergrok-auth.workspace = true
roder-search.workspace = true
roder-skills.workspace = true
roder-tui.workspace = true
roder-tools.workspace = true
roder-web-search.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
time.workspace = true
