[package]
name = "roder-code-index"
version = "0.1.0"
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme.workspace = true

[dependencies]
anyhow.workspace = true
ignore.workspace = true
roder-api.workspace = true
rusqlite.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sha2.workspace = true
time.workspace = true

[[bench]]
name = "code_index"
path = "../../benches/code-index/code_index.rs"
harness = false
