[package]
name = "roder-codex-auth"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
dirs.workspace = true
rand.workspace = true
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sha2.workspace = true
urlencoding.workspace = true
workspace-hack = { version = "0.1", path = "../../workspace-hack" }
