[package]
name = "roder-codex-auth"
version = "0.1.1"
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "README.md"

[dependencies]
anyhow.workspace = true
base64.workspace = true
dirs.workspace = true
rand.workspace = true
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sha2.workspace = true
urlencoding.workspace = true
