[package]
name = "roder-commands"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
roder-api.workspace = true
roder-dynamic-workflows.workspace = true
roder-skills.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_yaml.workspace = true
time.workspace = true
