[package]
name = "roder-commands"
version = "0.1.1"
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "README.md"

[dependencies]
anyhow.workspace = true
roder-api.workspace = true
roder-dynamic-workflows.workspace = true
roder-skills.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_yaml.workspace = true
time.workspace = true
