[package]
name = "roder-config"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
dirs.workspace = true
roder-api.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
time.workspace = true
toml.workspace = true
uuid = { workspace = true, features = ["v4"] }
