[package]
name = "roder-config"
version = "0.1.0"
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme.workspace = true

[dependencies]
anyhow.workspace = true
dirs.workspace = true
roder-api.workspace = true
roder-skills.workspace = true
reqwest = { workspace = true, features = ["blocking", "json"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
time.workspace = true
toml.workspace = true
uuid = { workspace = true, features = ["v4"] }
