[package]
name = "roder-configure"
version = "0.1.1"
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "README.md"

[[bin]]
name = "roder-configure"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
roder-api.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true
