[package]
name = "roder-context"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
roder-api.workspace = true
roder-code-index.workspace = true
roder-search.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
time = { workspace = true, features = ["serde", "serde-well-known"] }
tokio.workspace = true
