[package]
name = "roder-context"
version = "0.1.1"
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "README.md"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
roder-api.workspace = true
roder-code-index.workspace = true
roder-search.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
time = { workspace = true, features = ["serde", "serde-well-known"] }
tokio.workspace = true
