[package]
name = "roder-core"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
futures.workspace = true
roder-api.workspace = true
roder-roadmap.workspace = true
roder-sandbox.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
time.workspace = true
tokio = { workspace = true, features = ["full", "sync"] }
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
roder-ext-jsonl-session.workspace = true
roder-ext-runner-unix-local.workspace = true
